# docx-c-tiptap

./: BUILD-WINDOWS.md  CMakeLists.txt  CMakePresets.json  docx-c-parser-design.md  vcpkg.json
docx2tiptap/cli/: main.c
docx2tiptap/include/: docx2tiptap.h
docx2tiptap/src/: api.c  arena.c  arena.h  block_mapper.c  block_mapper.h  doc_reader.c  doc_reader.h  inline_mapper.c  inline_mapper.h  json_writer.c  json_writer.h  media_mapper.c  media_mapper.h  numbering_reader.c  numbering_reader.h  ooxml_ir.h  parse_context.c  parse_context.h  rels_reader.c  rels_reader.h  styles_reader.c  styles_reader.h  table_mapper.c  table_mapper.h  tiptap_ir.h  xml_util.c  xml_util.h  zip_reader.c  zip_reader.h
docx2tiptap/tests/: test_arena.c  test_parse.c  test_zip.c
docx2tiptap/tests/fixtures/: make_minimal_docx.py  minimal.docx
editor-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
editor-demo/src/: App.tsx  editor-thesis.scss  index.css  main.tsx
editor-demo/src/components/: DocChromeEditor.tsx  FormatToolbar.tsx  ToolbarBtn.tsx
editor-demo/src/extensions/: block-indent.ts  custom-heading.ts  custom-paragraph.ts  doc-with-meta.ts  docx-block-attrs.ts  editor-extensions.ts  image-layout.ts  thesis-nodes.ts
editor-demo/src/utils/: editor-block-attrs.ts  page-template.ts  sanitize-doc-html.ts  sanitize-docx-json.ts
scripts/: build.sh  configure-windows.ps1  setup_linux.sh  setup_windows.ps1
